--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,7 @@
     </main>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@1.5.18"></script>
     <script src="client.js" type="module"></script>
   </body>
 </html>
