--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,15 @@
         </div>
       </section>
 
+      <section class="chat">
+        <div class="chat-header">Chat</div>
+        <div id="chat-messages" class="chat-messages"></div>
+        <form id="chat-form" class="chat-form">
+          <input id="chat-input" type="text" placeholder="Say something…" autocomplete="off" />
+          <button type="submit" class="primary">Send</button>
+        </form>
+      </section>
+
       <section class="notes">
         <p>
           Tips: Press play or seek; the other viewer will follow. Turn on <strong>Play all</strong> to
