Fix subtitle matching and auto-enable tracks

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
       <section class="main-grid">
         <div class="player-area">
-          <video id="player" controls preload="metadata"></video>
+          <video id="player" controls preload="metadata" crossorigin="anonymous"></video>
           <div class="meta">
             <div>Peers: <span id="peers">0</span></div>
             <div>Sync: <span id="sync-state">Idle</span></div>
