Simplify tips text

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,7 @@
 
       <section class="notes">
         <p>
-          Tips: Press play or seek; the other viewer will follow. Turn on <strong>Play all</strong> to
-          auto-advance through the whole folder.
+          Tips: Press play or seek; the other viewer will follow.
         </p>
         <p id="hls-note"></p>
       </section>
